# ctest-cases

./: CMakeLists.txt  LICENSE  README.md
fail/: CMakeLists.txt
no-test/: CMakeLists.txt
pass/: CMakeLists.txt
timeout/: CMakeLists.txt  main.cpp
